<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_thermal_settings"
        android:title="Thermal Settings"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_quick_start"
        android:title="@string/menu_quick_start"
        android:icon="@android:drawable/ic_menu_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_connection_help"
        android:title="@string/menu_connection_help"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reset_tutorial"
        android:title="@string/menu_reset_tutorial"
        android:icon="@android:drawable/ic_menu_revert"
        app:showAsAction="never" />

</menu>
